# coreclr

src/corefx/: CMakeLists.txt
src/corefx/System.Net.Native/: CMakeLists.txt  corenet.cpp
src/pal/tests/palsuite/: CMakeLists.txt  paltestlist.txt
src/pal/tests/palsuite/networking/: CMakeLists.txt
src/pal/tests/palsuite/networking/ipaddress/: CMakeLists.txt  localhostaddrs.c
